--- a/output/go-consequences/Amite/Amite_model_application.json
+++ b/output/go-consequences/Amite/Amite_model_application.json
@@ -9,18 +9,17 @@
         "benefits",
         "damage",
         "model",
-        "TWI",
-        "NPS",
-        "P00710"
+        "LWI",
+        "Region 7"
     ],
     "grid": {
         "dimension": "2D",
-        "coordinate_system": "PROJCS[\"USA_Contiguous_Albers_Equal_Area_Conic_USGS_version\",GEOGCS[\"NAD83\",DATUM[\"North_American_Datum_1983\",SPHEROID[\"GRS 1980\",6378137,298.257222101,AUTHORITY[\"EPSG\",\"7019\"]],AUTHORITY[\"EPSG\",\"6269\"]],PRIMEM[\"Greenwich\",0],UNIT[\"Degree\",0.0174532925199433]],PROJECTION[\"Albers_Conic_Equal_Area\"],PARAMETER[\"latitude_of_center\",23],PARAMETER[\"longitude_of_center\",-96],PARAMETER[\"standard_parallel_1\",29.5],PARAMETER[\"standard_parallel_2\",45.5],PARAMETER[\"false_easting\",0],PARAMETER[\"false_northing\",0],UNIT[\"US survey foot\",0.304800609601219,AUTHORITY[\"EPSG\",\"9003\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH]]",
+        "coordinate_system": "Testing",
         "shape": "rectangular",
         "description": "Based on HEC-RAS Water Surface Elevation Raster"
     },
-    "spatial_extent": "POLYGON ((-90.54244888599382 30.18715263383419, -90.54244888599382 30.99962208695312, -91.2354704384213 30.99962208695312, -91.2354704384213 30.18715263383419, -90.54244888599382 30.18715263383419))",
-    "application_date": "2024-02-12",
+    "spatial_extent": "Testing",
+    "application_date": "2024-02-15",
     "common_input_files": [
         {
             "title": "Project File",
@@ -42,8 +41,9 @@
             "source_dataset": null,
             "description": "There may be multiple Structure Inventories in the Go-Consequences data directory.",
             "location": [
-                "/go-consequences/data/inventory_here.shp",
-                "/go-consequences/data/NSI.shp"
+                "/go-consequences/data/NSI.shp",
+                "/go-consequences/data/NSI.shp",
+                "/go-consequences/data/inventory_here.shp"
             ]
         }
     ],
