--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -91,9 +91,10 @@
                 // "Z:/LWI/region6/ECLC_HEC-RASV6.5_20240219/ECLC_HEC-RASV6.5.prj",
                 // "Z:/LWI/region6/LG_08070300_RAS/LG_08070300.prj",
                 // "Z:/LWI/region6/WC_RAS/WC.prj",
-                "Z:\LWI\region5\2023_1026_ToDOTD_Hydraulic_Model_Validation_Atchafalaya_Submittal2a\Model\AA_AtchRi_24OCT2023\AA_Atchafalaya_Ri.prj",
+                "Z:/LWI/region5/2023_1026_ToDOTD_Hydraulic_Model_Validation_Atchafalaya_Submittal2a/Model/AA_AtchRi_24OCT2023/AA_Atchafalaya_Ri.prj",
                 "--shp",
-                "V:/projects/p00813_nps_2023_greenbelt_ig/02_analysis/HEC-RAS_MainModel/Shapes/2DFlowArea.shp",
+                "C:/py/WestPark_HMS/maps/WestPark_Boundary_3451.shp",
+                // "V:/projects/p00813_nps_2023_greenbelt_ig/02_analysis/HEC-RAS_MainModel/Shapes/2DFlowArea.shp",
                 // "Z:/LWI/region6/EC_HEC-RAS_V631_20230925/Terrain/LiDAR_CoNED_Mask/CoNEDMask.shp",
                 "--keywords",
                 "LWI, Region 6",
