GUI inputs with quotes would cause an error. Added sanitzation of input fields to remove single and double quotes, as well as check for required types - extensions or directories.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -112,7 +112,8 @@
             "justMyCode": true,
             "args": [
                 "--hms",
-                "C:/py/WestPark_HMS/WestPark_HMS.hms",
+                // "C:/py/WestPark_HMS/WestPark_HMS.hms",
+                "Z:/LWI/region4/20240430_08080204_WH_DELIVERABLE/HMS/WhiskyChitto.hms",
                 "--shp",
                 "C:/py/WestPark_HMS/maps/WestPark_Boundary_3451.shp",
                 "--dss",
