--- a/output/go-consequences/Amite/Amite_model_application.json
+++ b/output/go-consequences/Amite/Amite_model_application.json
@@ -1,6 +1,6 @@
 {
     "title": "Go-Consequences Amite",
-    "description": "Description: Amite Go-Consequences Model Based on Dewberry Amite River HEC-RAS Model Results and USACE National Structure Inventory Data\n\nSimulations:\n\n\nHurricane Ida 2021 - Hurricane Ida 2021 Water Surface Elevation Results from Dewberry Amite River HEC-RAS Model with NSI Data",
+    "description": "Description: Amite Go-Consequences Model Based on Dewberry Amite River HEC-RAS Model Results and USACE National Structure Inventory Data\n\nSimulations:\n\n\nIssac (2012) - Amite LWI HEC-RAS Model results for Hurricane Isaac using AORC rainfall with Wind and Surge using an 8 segment downstream boundary informed by ADCIRC, and with upstream boundary conditions informed by HEC-HMS.\n\nThe structures inventory file is based on the USACE National Inventory Structures  (https://www.hec.usace.army.mil/confluence/nsi/userguides/download-tool \n\nAll data paths are relative to the LWI S3 bucket with the root path being: LWI/Models/Go-Consequences/Amite\n\n\nGustav (2008) - Amite LWI HEC-RAS Model results for Hurricane Gustav using AORC rainfall with Wind and Surge using an 8 segment downstream boundary informed by ADCIRC, and with upstream boundary conditions informed by HEC-HMS.\n\nThe structures inventory file is based on the USACE National Inventory Structures  (https://www.hec.usace.army.mil/confluence/nsi/userguides/download-tool \n\nAll data paths are relative to the LWI S3 bucket with the root path being: LWI/Models/Go-Consequences/Amite\n\n\nKatrina (2005) - Amite LWI HEC-RAS Model results for Hurricane Katrina using AORC rainfall with Wind and Surge using an 8 segment downstream boundary informed by ADCIRC, and with upstream boundary conditions informed by HEC-HMS.\n\nThe structures inventory file is based on the USACE National Inventory Structures  (https://www.hec.usace.army.mil/confluence/nsi/userguides/download-tool \n\nAll data paths are relative to the LWI S3 bucket with the root path being: LWI/Models/Go-Consequences/Amite",
     "keywords": [
         "go-consequences",
         "hazards",
@@ -20,6 +20,12 @@
     "application_date": "2024-05-17",
     "common_input_files": [
         {
+            "title": "Run Table",
+            "source_dataset": "Go-Consequences Run Table",
+            "description": "The Go-Consequences Run Table used to define multiple simulations.",
+            "location": "C:/py/hec_meta_extract/example/input/go-consequences/run_table.csv"
+        },
+        {
             "title": "Project File",
             "source_dataset": null,
             "description": "The project's Main Go-Consequences run script file",
@@ -30,8 +36,11 @@
             "source_dataset": "HEC-RAS",
             "description": "There may be multiple Water Surface Elevation Rasters in the Go-Consequences data directory.",
             "location": [
+                "/go-consequences/data/Amite_Isaac2012_AORC_ADCIRC_NoWind_2022Geometry.tif",
                 "/go-consequences/data/Amite_Katrina2005_AORC_ADCIRC_2021Geometry.tif",
-                "/go-consequences/data/flood_here.Tif"
+                "/go-consequences/data/Amite_Katrina2005_AORC_ADCIRC_2021Geometry.tif",
+                "/go-consequences/data/flood_here.Tif",
+                "/go-consequences/data/Amite_Gustav2008_AORC_ADCIRC_2022Geometry.tif"
             ]
         },
         {
@@ -52,7 +61,6 @@
             "description": "There may be multiple Output Feature Layers.",
             "location": [
                 "/go-consequences/output/Amite_Gustav2008_AORC_ADCIRC_2022Geometry_NSI.gpkg",
-                "/go-consequences/output/Amite_Isaac2012_AORC_ADCIRC_NoWind_2022Geometry_NSI.gpkg",
                 "/go-consequences/output/Amite_Katrina2005_AORC_ADCIRC_2021Geometry_NSI.gpkg",
                 "/go-consequences/output/Amite_Isaac2012_AORC_ADCIRC_NoWind_2022Geometry_NSI.gpkg"
             ]
