HMS - Added hyphens special character replacements. RAS - Now parsing the b file to obtain the output dss file.
Ready to build v2.3.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -92,8 +92,9 @@
                 // "Z:/LWI/region6/LG_08070300_RAS/LG_08070300.prj",
                 // "Z:/LWI/region6/WC_RAS/WC.prj",
                 // "Z:/Amite/Amite_LWI/Amite_RAS/Amite_2022.prj",
-                "V:/projects/p00542_cpra_2020_lwi_t10/02_analysis/CalValModel/Amite_20200114.prj",
+                // "V:/projects/p00542_cpra_2020_lwi_t10/02_analysis/CalValModel/Amite_20200114.prj",
                 // "Z:/LWI/region5/2023_1026_ToDOTD_Hydraulic_Model_Validation_Atchafalaya_Submittal2a/Model/AA_AtchRi_24OCT2023/AA_Atchafalaya_Ri.prj",
+                "Z:/WestPark/HEC-RASV6.3.1/WestPark.prj",    
                 "--shp",
                 "C:/py/WestPark_HMS/maps/WestPark_Boundary_3451.shp",
                 // "V:/projects/p00813_nps_2023_greenbelt_ig/02_analysis/HEC-RAS_MainModel/Shapes/2DFlowArea.shp",
@@ -115,7 +116,8 @@
             "args": [
                 "--hms",
                 // "C:/py/WestPark_HMS/WestPark_HMS.hms",
-                "Z:/LWI/region4/20240430_08080204_WH_DELIVERABLE/HMS/WhiskyChitto.hms",
+                "Z:/WestPark/WestPark_HMS/WestPark_HMS.hms",
+                // "Z:/LWI/region4/20240430_08080204_WH_DELIVERABLE/HMS/WhiskyChitto.hms",
                 "--shp",
                 "C:/py/WestPark_HMS/maps/WestPark_Boundary_3451.shp",
                 "--dss",
